--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,9 @@ jobs:
           toolchain: stable
           components: clippy
 
+      - name: Install cargo-pgrx
+        run: cargo install --locked cargo-pgrx
+
       - name: Cache cargo build
         uses: Swatinem/rust-cache@v2
 
